--- a/app/src/main/res/layout/adapter_user.xml
+++ b/app/src/main/res/layout/adapter_user.xml
@@ -6,13 +6,17 @@
     android:orientation="vertical"
     android:layout_gravity="center">
 
-    <ImageView
+    <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/ivPictureSmall"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginStart="6dp"
+        app:civ_border_color="@color/colorPrimary"
+        app:civ_border_width="2dp"
+        app:civ_shadow="true"
+        app:civ_shadow_radius="2dp"
         android:src="@mipmap/default_picture"
         />
     <TextView
