--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,16 +16,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0"/>
 
-    <TextView
-        android:id="@+id/tvDetails"
+    <include
+        android:id="@+id/layoutDetails"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:text="@string/details"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerView"
-        app:layout_constraintVertical_bias="1" />
+        app:layout_constraintVertical_bias="1"
+        layout="@layout/layout_details"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
