--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerView"
         app:layout_constraintVertical_bias="1"
-        layout="@layout/layout_details"/>
+        layout="@layout/layout_details"
+        android:visibility="gone"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
