--- a/app/src/main/res/layout/adapter_user.xml
+++ b/app/src/main/res/layout/adapter_user.xml
@@ -4,7 +4,10 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true">
 
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/ivPictureSmall"
@@ -17,8 +20,8 @@
         app:civ_border_width="2dp"
         app:civ_shadow="true"
         app:civ_shadow_radius="2dp"
-        android:src="@mipmap/default_picture"
         />
+
     <TextView
         android:id="@+id/tvName"
         android:layout_width="match_parent"
